# v3-operator

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .trivyignore  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  LICENSE  README.md  docker-compose.yml  local.yml  main.py  operator.spec  pyproject.toml  setup.cfg
.circleci/: config.yml
.github/workflows/: ci.yaml  docker.yaml  pyproject.yaml  release.yaml
deploy/: .env.example  docker-compose.yml
deploy/prater/: .env.example  docker-compose.yml
hooks/: hook-ssl.py
scripts/: install.sh
src/: __init__.py  _vulture_whitelist.py  api.py  conftest.py  health_server.py  main.py  setup_config.py  setup_logging.py  startup_check.py  utils.py
src/commands/: check_deposit_data.py  common.py  consolidate.py  create_keys.py  create_wallet.py  exit_validators.py  export_public_keys.py  generate_key_shares.py  generate_public_keys.py  get_validators_root.py  import_genesis_keys.py  init.py  merge_deposit.py  merge_deposit_data.py  node_manager_start.py  process_meta_vaults.py  process_metavaults.py  rated_self_report.py  recover.py  remote_db_validator.py  remote_db_web3signer.py  remote_signer_setup.py  setup_remote_signer.py  start.py  start_api.py  start_base.py  submit_rated_network.py  sync_operator.py  sync_validator.py  sync_web3signer.py  update_db.py  validators_exit.py  worker.py
src/commands/internal/: process_redeemer.py  update_redeemable_positions.py
src/commands/node/: node_install.py
src/commands/nodes/: node_install.py  node_start.py  node_status.py
src/commands/start/: base.py  common_option.py  hashi_vault.py  local.py  relayer.py  remote_signer.py  remove_signer.py  startup_check.py
src/commands/tests/: common.py  factories.py  test_consolidate.py  test_create_keys.py  test_create_wallet.py  test_exit_validators.py  test_generate_key_shares.py  test_init.py  test_merge_deposit_data.py  test_remote_signer_setup.py  test_setup_remote_signer.py  test_sync_validator.py  test_sync_web3signer.py  test_update_db.py  test_validators_exit.py
src/common/: accounts.py  app_state.py  beacon.py  checks.py  clients.py  config.py  consensus.py  consolidations.py  contracts.py  contrib.py  credentials.py  database.py  decorators.py  eigenlayer_contracts.py  exceptions.py  execution.py  graph.py  harvest.py  health_server.py  ipfs.py  language.py  logging.py  metrics.py  middlewares.py  migrate.py  oracles.py  password.py  protocol_config.py  register_validators.py  startup_check.py  tasks.py  transaction.py  types.py  typings.py  utils.py  validator_manager_signature.py  validators.py  vault.py  vault_config.py  wallet.py  (+2 more)
src/common/abi/: Erc20Token.json  Errors.json  IBaseVault.json  IDepositDataRegistry.json  IEigenPodOwner.json  IEthKeeper.json  IEthMetaVault.json  IEthRestakeVault.json  IEthVault.json  IEthVaultV1.json  IGnoVault.json  IKeeper.json  INodesManager.json  IOracles.json  IOsTokenRedeemer.json  IOsTokenVaultController.json  ISubVaultsRegistry.json  IV4EthMetaVault.json  IValidatorsChecker.json  IValidatorsRegistry.json  IVaultValidators.json
src/common/tests/: factories.py  test_contract_errors.py  test_harvest.py  test_logging.py  test_transaction.py  test_utils.py  test_validators.py  utils.py
src/config/: config.py  networks.py  settings.py
src/eigenlayer/: contracts.py  database.py  execution.py  generator.py  tasks.py  typings.py  validators.py  withdrawals.py
src/eigenlayer/abi/: IBeaconChainOracle.json  IDelayedWithdrawalRouter.json  IDelegationManager.json  IEigenPodManager.json
src/eth/: clients.py  consensus.py  contracts.py  deposit_scanner.py  event_scanner.py  execution.py  queries.py
src/eth/abis/: vault.json
src/exits/: consensus.py  execution.py  tasks.py  typings.py  utils.py
src/exits/tests/: test_tasks.py
src/harvest/: execution.py  tasks.py
src/key_manager/: database.py  encryptor.py  typings.py
src/meta_vault/: contracts.py  exceptions.py  graph.py  service.py  startup_check.py  tasks.py  typings.py
src/meta_vault/commands/: process_meta_vaults.py
src/meta_vault/tests/: factories.py  test_service.py  test_tasks.py
src/node_manager/: database.py  execution.py  oracles.py  register_validators.py  startup_check.py  tasks.py  typings.py
src/node_manager/tests/: test_oracles.py  test_oracles_http.py  test_register_validators.py  test_tasks.py
src/nodes/: exceptions.py  execution_sync_history.py  lighthouse.py  process.py  status.py  status_history.py  typings.py
src/nodes/utils/: proc.py  timeout.py
src/nodewise/: exceptions.py  execution_sync_history.py  lighthouse.py  process.py  status.py  status_history.py
src/nodewise/commands/: node_install.py  node_start.py  node_status.py
src/nodewise/utils/: proc.py  timeout.py
src/redeem/: api_client.py  graph.py  os_token_converter.py  tasks.py  typings.py
src/redeem/tests/: test_api_client.py  test_graph.py
src/redemptions/: api_client.py  cache.py  contracts.py  execution.py  fetch_positions.py  graph.py  merkle_tree.py  os_token_converter.py  tasks.py  typings.py
src/redemptions/abi/: IOsTokenRedeemer.json
src/redemptions/commands/: process_redeemer.py  update_redeemable_positions.py
src/redemptions/tests/: conftest.py  factories.py  test_api_client.py  test_cache.py  test_execution.py  (+5 more)
src/remote_db/: commands.py  database.py  tasks.py  typings.py
src/reward_splitter/: contracts.py  execution.py  graph.py  tasks.py  typings.py
src/shard/: shard.py
src/test_fixtures/: hashi_vault.py  remote_signer.py
src/validators/: consensus.py  consolidation_manager.py  consolidation_selector.py  database.py  endpoints.py  event_processors.py  exceptions.py  execution.py  ipfs.py  metrics.py  oracles.py  os_token_redeemer.py  register_validators.py  relayer.py  signing.py  tasks.py  typings.py  utils.py  validators_manager.py
src/vault_validators/: tasks.py  typings.py
src/wallet/: tasks.py
src/withdrawals/: assets.py  execution.py  tasks.py  typings.py  validators_manager.py
tests/: test_sync_validator.py  test_sync_web3signer.py
(+46 files in other folders)
