[tool.poetry]
name = "v3-operator"
version = "0.3.4"
description = "StakeWise operator service for registering vault validators"
authors = ["StakeWise Labs <info@stakewise.io>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-decouple = "==3.8"
sentry-sdk = "==1.32.0"
py-ecc = "==6.0.0"
multiproof = { git = "https://github.com/stakewise/multiproof.git", rev = "v0.1.5" }
sw-utils = { git = "https://github.com/stakewise/sw-utils.git", rev = "v0.3.31" }
staking-deposit = { git = "https://github.com/ethereum/staking-deposit-cli.git", rev = "v2.4.0" }
pycryptodomex = "==3.19.0"
milagro-bls-binding = "==1.9.0"
click = "==8.1.7"
tomli = "~2"
eciespy = "==0.4.0"
prometheus-client = "==0.17.1"
psycopg2 = "==2.9.9"
pyyaml = "==6.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "==3.0.1"
mypy = "==1.6.1"
isort = "==5.12.0"
pytest = "==7.4.2"
pytest-asyncio = "==0.21.1"
pre-commit = "==3.5.0"
Flake8-pyproject = "==1.2.3"
bandit = { version = "==1.7.5", extras = ["toml"] }
black = { version = "==23.10.0", extras = ["d"] }
pyinstaller = "==5.13.2"
faker = "==19.11.0"
flake8-datetime-utcnow-plugin = "==0.1.2"
flake8-print = "==5.0.0"
types-pyyaml = "==6.0.12.12"
coverage = "==7.3.2"
aioresponses = "^0.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["*/tests/*", "src/config/networks.py", "conftest.py"]
skips = ["B608"]

[tool.pylint."pre-commit-hook"]
disable = ["C0103", "C0114", "C0115", "C0116", "W0511", "W0703", "R0801"]
ignore-paths=["src/.*/tests/.*", "src/test_fixtures/.*"]
ignore=["conftest.py"]

[tool.pylint."BASIC"]
good-names = ["db", "i", "w3"]
ignored-modules=["milagro_bls_binding"]

[tool.flake8]
extend-ignore = ["E203", "E501"]  # line length will be checked by pylint
exclude = ["conftest.py"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.report]
fail_under = 76
