[tool.poetry]
name = "v3-operator"
version = "v1.3.2"
description = "StakeWise operator service for registering vault validators"
authors = ["StakeWise Labs <info@stakewise.io>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-decouple = "==3.8"
sentry-sdk = "==1.32.0"
py-ecc = "==6.0.0"
gql = {extras = ["aiohttp"], version = "==3.5.0"}
multiproof = { git = "https://github.com/stakewise/multiproof.git", rev = "v0.1.8" }
sw-utils = {git = "https://github.com/stakewise/sw-utils.git", rev = "v0.6.14"}
staking-deposit = { git = "https://github.com/ethereum/staking-deposit-cli.git", rev = "v2.4.0" }
pycryptodomex = "3.19.1"
click = "==8.1.7"
tomli = "~2"
eciespy = "==0.4.0"
prometheus-client = "==0.17.1"
psycopg2 = "==2.9.9"
pyyaml = "==6.0.1"
python-json-logger = "==2.0.7"

[tool.poetry.group.dev.dependencies]
pylint = "==3.0.1"
mypy = "==1.6.1"
isort = "==5.12.0"
pytest = "==7.4.2"
pytest-asyncio = "==0.21.1"
pre-commit = "==3.5.0"
Flake8-pyproject = "==1.2.3"
bandit = { version = "==1.7.5", extras = ["toml"] }
black = { version = "==23.10.0", extras = ["d"] }
pyinstaller = "==5.13.2"
faker = "==19.11.0"
flake8-print = "==5.0.0"
flake8-datetimez = "==20.10.0"
types-pyyaml = "==6.0.12.12"
coverage = "==7.3.2"
aioresponses = "^0.7.4"
types-requests = "==2.31.0.20240406"
types-setuptools = "==70.0.0.20240524"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["*/tests/*", "src/config/networks.py", "conftest.py"]
skips = ["B608"]

[tool.pylint."pre-commit-hook"]
disable = [
    "C0103",  # invalid-name
    "W0511",  # todo (fixme)
    "W0703",  # broad-except
    "C0114",  # missing-class-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0801",  # duplicate-code
    "R0903"   # too-few-public-methods
]
ignore-paths=["src/.*/tests/.*", "src/test_fixtures/.*"]
ignore=["conftest.py"]

[tool.pylint."BASIC"]
good-names = ["db", "i", "w3"]
ignored-modules=["milagro_bls_binding"]

[tool.flake8]
extend-ignore = ["E203", "E501"]  # line length will be checked by pylint
exclude = ["conftest.py"]

[tool.mypy]
exclude = ["test"]
ignore_missing_imports = true
python_version = "3.10"
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = 'web3.*'
no_implicit_optional = false

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.report]
fail_under = 73
