[tool.poetry]
name = "v3-operator"
version = "v3.0.4"
description = "StakeWise operator service for registering vault validators"
authors = ["StakeWise Labs <info@stakewise.io>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-decouple = "==3.8"
sentry-sdk = "==1.32.0"
py-ecc = "==6.0.0"
gql = {extras = ["aiohttp"], version = "==3.5.0"}
multiproof = { git = "https://github.com/stakewise/multiproof.git", rev = "v0.1.8" }
sw-utils = {git = "https://github.com/stakewise/sw-utils.git", rev = "v0.9.3"}
staking-deposit = { git = "https://github.com/ethereum/staking-deposit-cli.git", rev = "v2.8.0" }
pycryptodomex = "3.19.1"
click = "==8.1.7"
tomli = "~2"
eciespy = "==0.4.3"
prometheus-client = "==0.17.1"
psycopg2 = "==2.9.9"
pyyaml = "==6.0.1"
python-json-logger = "==2.0.7"
aiohttp = "==3.11.11"

[tool.poetry.group.dev.dependencies]
pylint = "==3.3.3"
mypy = "==1.14.1"
isort = "==5.12.0"
pytest = "==8.3.3"
pytest-asyncio = "==0.25.2"
pre-commit = "==3.5.0"
Flake8-pyproject = "==1.2.3"
bandit = { version = "==1.7.5", extras = ["toml"] }
black = { version = "==24.10.0", extras = ["d"] }
faker = "==19.11.0"
flake8-print = "==5.0.0"
flake8-datetimez = "==20.10.0"
types-pyyaml = "==6.0.12.12"
coverage = "==7.3.2"
aioresponses = "^0.7.4"
types-requests = "==2.31.0.20240406"
types-setuptools = "==70.0.0.20240524"
flake8-newspaper-style = "==0.4.3"

[tool.poetry.group.build.dependencies]
pyinstaller = "==6.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["*/tests/*", "src/config/networks.py", "conftest.py"]
skips = ["B608"]

[tool.pylint."pre-commit-hook"]
disable = [
    "C0103",  # invalid-name
    "W0511",  # todo (fixme)
    "W0703",  # broad-except
    "C0114",  # missing-class-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0801",  # duplicate-code
    "R0903",  # too-few-public-methods
    "R0917"   # Too many positional arguments
]
ignore-paths=["src/.*/tests/.*", "src/test_fixtures/.*"]
ignore=["conftest.py"]

[tool.pylint."BASIC"]
good-names = ["db", "i", "w3"]
ignored-modules=["milagro_bls_binding"]

[tool.flake8]
extend-ignore = [
    "E203",  # Whitespace before ':'
    "E501",  # Line too long
    "E701"   # Multiple statements on one line (colon)
]
exclude = ["conftest.py"]

[tool.mypy]
exclude = ["test"]
ignore_missing_imports = true
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = 'web3.*'
no_implicit_optional = false

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.report]
omit = ["*/tests/*"]
fail_under = 66

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.vulture]
exclude = ["*/test*", "conftest.py", "networks.py"]
ignore_names = [
    "default_account",  # execution client
    "_async_session_pool",  # credentials.py
    "eth_typing_metadata", "ssz_metadata",  # pyinstaller
    "DATA_DIR",  # settings
    "contract_event", "get_from_block", "process_events",  # event processor
    "validators_root",  # ApprovalRequest
    "previous_version", "current_version", "genesis_validators_root", "fork_info", "voluntary_exit",  # remote.py
    "rounding"  # decimal context
]
